# x86emu

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build-and-push.yml
src/: main.cpp
src/boot/: boot.asm
